# mre

./: .dockerignore  .env.local.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  PHASE0_PROMPT.md  README.md  SESSION_CLOSEOUT.md  docker-compose.tls.yml  docker-compose.yml  plant_config.json  pyproject.toml
.github/workflows/: ci.yml
datasets/glass_box/: README.md  SABOTAGE_MENU.md  WALKTHROUGH.md  calendars.csv  cost_model.json  manifest.json  orders.csv  products.csv  resources.csv  routing_lines.csv  routings.csv  setup_transitions.csv
datasets/pilot_scale/: PREDICTIONS.md  PROFILE_PROVENANCE.md  pilot_profile.json
deploy/: ci_local.ps1  scale_ladder.json  smoke.py
deploy/azure/: .env.example  README.md  deploy.sh  main.bicep
docs/: 00-README.md  01-canonical-model-spec.md  02-evidence-contract-spec.md  03-poc-plan.md  04-design-history.md  05-constraint-catalog.md  06-incoming-data-spec.md  07-roadmap.md  08-security-posture.md
legacy/: Backend.py  Formatnewjobs.py  Launcher.py  Plotly3.py  ProFunctv2_8.py  README.md  Simple-Launcher.py  Test.py  app.py  batchsep.py  generate_capacity.py  intdash.py  optimizer-bridge.py
sample_data/: DEFECTS.md  SCENARIO.md  costmodel.json  machine_schedules.json  machines.csv  openworkorder.csv  product.csv  routing.csv  setup_transitions.json  workcenters.csv
sample_data_v2/: SCENARIO.md  costmodel.json  openworkorder.csv  product.csv  routinglines.csv
tests/: README.md  conftest.py  test_adapter.py  test_ai_voice.py  test_api_endpoints.py  test_ask_chain_api.py  test_calendar_utils.py  test_certificate_conversation.py  test_chunking_scale_ladder.py  test_conformance.py  test_consolidator.py  test_declared_but_unread.py  test_defaults_reproduce_baseline.py  test_demo.py  test_dq_report.py  test_edit_question_domain.py  test_edit_snapshot_id.py  test_eligibility_consistency.py  test_entities.py  test_evidence_index.py  test_explainer.py  test_extractor.py  test_forced_alternatives.py  test_generate_erp_dataset.py  test_glass_box.py  test_horizon_slice.py  test_ids_alternative_groups.py  test_ids_end_to_end.py  test_ids_rule_registry.py  test_integration.py  test_interpreter.py  test_longpath.py  test_mid_replan.py  test_multi_route.py  test_multi_route_rates.py  test_ortools_pin.py  test_overtime_end_to_end.py  test_overtime_premium.py  test_phase2_integration.py  test_planner.py  (+37 more)
tools/: build_cockpit_fixture.py  build_planner_fixture.py  build_rolling_fixture.py  calibrate_outliers.py  check_resource_load.py  chunking_scale_spike.py  chunking_scale_spike_report.md  chunking_spike2.py  chunking_spike2_report.md  diagnose_infeasible.py  extract_pilot_profile.py  find_infeasible_wp.py  gauntlet_rescue_report.py  generate_erp_dataset.py  generate_plant_config.py  isolate_infeasible.py  mini_solve.py  pilot_measurements.py  pilot_measurements_report.json  profile_raw_data.py  replicate_main.py  resource_load_n.py  rolling_golden.py  schedule_viewer.py  solver_gap_probe.py  solver_gap_probe_report.md  test_no_calendar.py
(+182 files in other folders)
