[project]
name = "mre"
version = "0.0.1"
description = "Manufacturing Reasoning Engine - canonical model, evidence contract, CP-SAT scheduling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "ortools>=9.8",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mre.catalog" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'); opt in with --runslow",
]
