[project]
name = "mre"
version = "0.0.1"
description = "Manufacturing Reasoning Engine - canonical model, evidence contract, CP-SAT scheduling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "ortools==9.15.6755",  # PINNED EXACT: CP-SAT is not reproducible across versions.
                           # Verified 2026-07-15 to reproduce every golden baseline
                           # byte-for-byte (see docs/04 2026-07-15). An unpinned solver
                           # is an unpinned product. Guarded by tests/test_ortools_pin.py.
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# ``anthropic`` is a REQUIRED dev dependency (Session 4B.3a CU4a): the M10 LLM
# renderer is lazily/try-guarded in production (fail-closed, correctly unlocked),
# but tests/test_render_fail_closed.py constructs a real ``anthropic.Anthropic``
# client to prove the real render path fails closed — so the SDK must be present
# in the dev/test environment. It was reaching CI only via manual installs until
# now; pin it as an explicit dev extra so a fresh checkout runs the full suite.
dev = ["pytest>=8.0", "httpx>=0.27", "anthropic>=0.40"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mre.catalog" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'); opt in with --runslow",
]
